@@ -61,8 +61,8 @@ Type 'q()' to quit R.
 +     "\n\t starting with 'is.' :\t  ",
 +     length(is.bi <- bi[substring(bi,1,3) == "is."]), "\n", sep = "")
 
-Number of base objects:		1240
-Number of functions in base:	1210
+Number of base objects:		1241
+Number of functions in base:	1211
 	 starting with 'is.' :	  50
 
 > ## 0.14  : 31
